...
        
    }
}

extension StatisticViewController {
    enum Metric {
        static let pageVCItems: [String] = ["All", "My country", "All countries"]
        static let pageVCBackgroundColor: UIColor = .white
    }
    enum SegmentedControl {
        static let height: CGFloat = 36
        static let selectedSegmentIndex: Int = 0
        static let layerCornerRadius: CGFloat = 8
...
