...
        }
    }
}

extension ListOfCountriesViewController {
    enum Metrics {
        static let searchBarPlaceholderText: String = "Type country`s name"
        static let searchBarTextFieldCornerRadius: CGFloat = 10.0
        static let searchBarHeight: CGFloat = 48
    }
}

